<resources>
    <string name="app_name">ClocKeys</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login_start">LoginStart</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="signup"><u>Signup</u></string>
    <string name="dont_have_account">Don\'t have account?</string>
    <string name="select_birthdate">Select Birthdate</string>
    <string name="family_name">Family Name</string>
    <string name="surname">Surname</string>
    <string name="personal_details">Personal Details</string>
    <string name="owner">Owner</string>
    <string name="employee">Employee</string>
    <string name="new_user">New User</string>
    <string name="account_details">Account Details</string>
    <string name="timecard_and_manage"><u>Timecard and Manage</u></string>
    <string name="timecard_total">Total:</string>
    <string name="last_punch">Last Punch:</string>

    <string name="name">Name</string>
    <string name="name_description">Provide your profile with your first name, last name, or a nickname. </string>

    <string name="bio">Bio</string>
    <string name="bio_description">Describe yourself with a short biography highlighting some key personal accomplishments, goals, or livelihood!</string>

    <string name="address">Address</string>
    <string name="address_description">Provide your profile with your current specific address. Include the city, street name, and possibly your postal code!</string>
    <string name="dob_description">Provide your profile with that special date that you call your birthday!</string>
    <string name="announcement_notification_example">This is the text where the author of the notification will write their message to the company. Users can choose to dismiss it or not.</string>
    <string name="dismiss">Dismiss</string>
    <string name="announcement_title_description">Describe your announcement with a short and previse title.</string>
    <string name="announcement_details">Write a descriptive and detailed text to provide your company the notification with.</string>
    <string name="dismiss_description">Choose the date in which your notification is allowed to be removed from the employee\'s notification bin.</string>
    <string name="company_name_description">Provide the professional name of your company in which you plan to use the app to manage yourself and your team</string>
    <string name="company_address_description">Provide the most descriptive and accurate address of your company workplace/head quarters/meeting grounds, etc.</string>

    <string-array name="sort_types">
        <item>Age</item>
        <item>Hire Date</item>
        <item>ID</item>
        <item>Name</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="image_notification_description">Describe your notification with a short and precise title.</string>
    <string name="image_notification_picture_text">Provide one or more images to represent your new notification to your company.</string>
    <string name="register_description">Provide an email address and a strong password to finish your account creation.</string>
</resources>