<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Startups.Signup"
    android:background="@color/purple_0"
    >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_200"
                    android:elevation="4dp"
                    app:cardCornerRadius="0dp"
                    android:layout_marginBottom="10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <ImageButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@color/transparent"
                            android:id="@+id/signupBackButton"
                            android:layout_gravity="center"
                            android:paddingStart="20dp"
                            android:src="@drawable/signup_activity_back"></ImageButton>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:text="@string/new_user"
                            android:gravity="center"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp"
                            android:textSize="25sp"
                            android:layout_marginStart="40dp"
                            >

                        </TextView>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <RadioGroup
                    android:id="@+id/signupRadioGroup"
                    android:gravity="center"
                    android:paddingTop="10dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:layout_width="100dp"
                        android:id="@+id/employeeSignupButton"
                        android:layout_height="50dp"
                        android:text="@string/employee"
                        android:checked="true"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:button="@color/transparent"
                        android:textColor="@color/white"
                        android:layout_weight="1"
                        android:background="@drawable/radio_button_employee_selector"/>
                    <androidx.appcompat.widget.AppCompatRadioButton
                        android:id="@+id/ownerSignupButton"
                        android:layout_width="100dp"
                        android:layout_height="50dp"
                        android:text="@string/owner"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:button="@color/transparent"
                        android:textColor="@color/purple_200"
                        android:layout_weight="1"
                        android:checked="false"
                        android:background="@drawable/radio_button_owner_selector"/>

                </RadioGroup>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    android:elevation="10dp"
                    android:layout_margin = "10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/account_details"
                            android:layout_gravity="left"
                            android:layout_marginStart="15dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_marginTop="30dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/white"
                            android:hint="Username"
                            app:endIconMode="clear_text">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signupUsernameInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="2dp"
                            android:background="@color/white"
                            android:layout_marginTop="20dp"
                            android:hint="Password"
                            app:endIconMode="clear_text">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signupPasswordInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="30dp"
                            android:background="@color/white"
                            android:hint="Confirm Password"
                            app:endIconMode="clear_text">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signupConfirmPasswordInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"
                                android:inputType="textPassword"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/white"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    android:elevation="10dp"
                    android:layout_margin = "10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/black"
                            android:text="@string/personal_details"
                            android:layout_gravity="left"
                            android:layout_marginStart="15dp"
                            android:textStyle="bold"
                            android:textSize="20sp"
                            android:layout_marginTop="30dp" />

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/white"
                            android:hint="@string/surname"
                            app:endIconMode="clear_text">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signupNameInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="32dp"
                            android:layout_marginEnd="32dp"
                            android:layout_marginBottom="30dp"
                            android:background="@color/white"
                            android:hint="@string/family_name"
                            app:endIconMode="clear_text">


                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/signupFamilyNameInput"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:maxLines="1"/>
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardBackgroundColor="@color/purple_100"
                    app:cardUseCompatPadding="true"
                    app:cardCornerRadius="20dp"
                    android:elevation="10dp"
                    android:layout_margin = "10dp">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:src="@drawable/signup_birthday_vector"
                            android:layout_gravity="center"
                            android:layout_marginTop="5dp"
                            ></ImageView>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="25sp"
                            android:layout_marginTop="10dp"
                            android:id="@+id/signupBirthdayTextView"
                            android:textColor="@color/white"
                            android:layout_gravity="center"
                            android:textStyle="bold"
                            android:text="FOR TEST">
                        </TextView>
                        <Button
                            android:layout_width="wrap_content"
                            android:id="@+id/signupBirthdayButton"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/purple_200"
                            android:text="@string/select_birthdate"
                            android:textSize="15sp">
                        </Button>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </ScrollView>

</LinearLayout>